# burro-engine

./: .gitignore  Makefile  Makefile.am  README.md  TODO.org  bootstrap.sh  burro-engine.desktop  burro.cbp  burro.depend  burro.layout  configure.ac  dl.c  eng_audio.c  eng_audio.h  eng_draw.c  eng_draw.h  eng_state.c  eng_state.h  eng_video.c  eng_video.h  engine.c  engine.h  engine_constants.h  engine_priv.h  game.c  game.h  main.c  pulseaudio.c  pulseaudio.h
REFACTORY/: ConvertUTF.c  Makefile  backdrop.cpp  bg.cpp  console.cpp  console2.c  const.h  draw.cpp  ecma48.c  ecma48.h  ecma48.rl  eng.cpp  fixed8x12.h  js.cpp  lineedit.cpp  loop.cpp  main.cpp  makeheaders.h  obj.cpp  script.js  tmp.rl  xcairo.cpp  xcairo.h  xsdl.cpp  xsdl2.h
REFACTORY2/burro-master-project-skeleton/: .gitignore  Makefile.am  README.b  config.h.in  configure.ac
REFACTORY2/burro-master-project-skeleton/game/: Makefile.am  README  aclocal.m4  configure.ac
REFACTORY2/burro-master-project-skeleton/game/src/: game.scm.in
REFACTORY2/targatool/: .gitignore  Makefile  README  colors.c  map.txt  palettize.h  targa.h  targatool  targatool.c
REFACTORY3/: ResCache.cpp  ResHandle.hpp  backdrop.hpp  console.cpp  console.hpp  ecma48_test.cpp  js_func.hpp  lineedit.hpp  xsdl.cpp  xsdl.hpp
REFACTORY3/libds/: bg.h  xcairo.h
REFACTORY3/libtga/: libtga.c  libtga.h  targa.c  test-libtga.c
REFACTORY3/old_src2/: eng_input.h  eng_video.c  engine.h  engine_constants.h
burro-win/: App.xaml  App.xaml.cpp  App.xaml.h  MainPage.xaml  MainPage.xaml.cpp  MainPage.xaml.h  Package.appxmanifest  burro-win.sln  burro-win.vcxproj  burro-win.vcxproj.filters
burro-win/Generated Files/: App.g.h  App.g.hpp  App.xaml  App.xbf  MainPage.g.h  MainPage.g.hpp  MainPage.xaml  MainPage.xbf  XamlTypeInfo.g.cpp
data/: Makefile.am  com.lonelycactus.burroengine.desktop
data/icons/: Makefile.am
doc/: TODO.org  bootstrap.txt  burro-engine.md  js_api.texi
elisp/: NOTES  emacs.el
engine/: Doxyfile  Interpreter.cpp  Makefile  Makefile.am  Object.cpp  README  ResourceFile.cpp  ResourceFile.hpp  const.h  draw.cpp  ecma48_test.hpp  engine.scm  loop.cpp  main.c  main.cpp  pram.scm  tmx.scm  utf.cpp  utf.hpp  wave.txt  x.h  xcairo.cpp  xiso9660.hpp  y.h
engine/g/: game.scm.m4  main.scm
engine/libds/: list_bg.h  test-libds.c  xcairo.c
engine/libtga/: color.c
engine/old_src2/: commands.c  eng_timers.h  game.c  tga.cpp
engine/r/: README  burro.resource.xml  resource.xml
engine/x/: Makefile  x.h  xcairo.c  xcairo.h  xgdk-pixbuf.c  xgdk-pixbuf.h  xgdk.h  xgio.c  xgio.h  xglib.c  xglib.h  xgtk.c  xgtk.h  xguile.c  xguile.h  xpulseaudio.c  xpulseaudio.h
engine/y/: 6x9.h  audio_model.c  audio_model.h  backdrop.c  backdrop.h  bg.c  bg.h  console.c  console.h  draw.c  draw.h  ecma48.c  ecma48.rl  eng.c  eng.h  guile.c  guile.h  io.h  lineedit.c  lineedit.h  lisp.c  lisp.h  loop.c  loop.h  matrix.c  matrix.h  obj.c  obj.h  pulseaudio.c  pulseaudio.h  rand.c  rand.h  repl.c  sheet.c  sheet.h  spritesheet.c  spritesheet.h  textbox.c  textbox.h  tga.h  (+6 more)
engine/z/: game.c  pram.scm  swig.i  tmx.h  vram.scm
experiments/: build.sh  gstreamer-beep.c
experiments/server/: Makefile.am  repl.scm
game/: Makefile  Makefile.am  brickroom1.tmx  burro-main.scm  game.scm  main.scm.m4  scifi1_256x256.json  scifi1_256x256.tmx  scifi_platform.txt  serveez.cfg  simple.scm  tmp.scm
game/burro/: audio.scm  automake-test-lib.scm  markup.scm  passage.scm
gui/: Makefile.am  commands.c  commands.h  engine.c  engine.h  engine_constants.h  engine_priv.h  extern.c  extern.h  io.c  main.c  pulseaudio.c  socket.c
meta/: Makefile.am  emacs.el.in  filo.c  run.sh.in  run_emacs.sh  run_emacs.sh.in
samples/tones/: Makefile  cp437.h  io.h  main.c  tga.c
samples/tune/: Makefile  README  cga8.tga  cga8.xcf  main.c  tga.h  tune.h
src/: Background.cpp  Background.hpp  Interpreter.cpp  Interpreter.hpp  Makefile  Makefile.am  Makefile.fedora27  Object.hpp  ResCache.cpp  ResCache.hpp  ResHandle.cpp  ResHandle.hpp  ResourceFile.cpp  ResourceFile.hpp  backdrop.cpp  bdf-convert.c  burro-glade.xml  burro-xml.scm  burro.scm  burro_app.c  burro_app.h  burro_app_win.c  burro_app_win.h  burro_canvas.c  burro_canvas.h  burro_canvas_bg.c  burro_canvas_bg.h  burro_canvas_colors.c  burro_canvas_colors.h  burro_canvas_vram.c  burro_canvas_vram.h  burro_config_keys.h  burro_console.c  burro_console.h  burro_lisp.c  burro_lisp.h  burro_messageview.h  burro_preferences_dialog.c  burro_preferences_dialog.h  burro_repl.c  (+35 more)
src/burro/: colors.scm  debug.scm  drivers.scm  error.scm  pm.scm  process.scm  xml.scm
src/burro/process/: base.scm  call-procedure.scm  fade.scm  text-click.scm  wait.scm
src/g/: main.scm
src/libds/: README  libds-private.h  libds.c  libds.h  list.c  list.h  list_bg.c  list_obj.c  list_obj.h  obj.h  test-libds.c  xcairo.c  xcairo.h
src/libtga/: color.c  color.h  common.h  libtga-private.h  libtga.c  libtga.h  targa.c
src/old_src2/: eng_audio.c  engine_priv.h  extern.c  font8x12.h
src/r/: app-menu.ui  burro.resource.xml  gears-menu.ui  library.scm  resource.xml  window.ui
src/x/: README  xcairo.c  xcairo.h  xgdk-pixbuf.h  xgdk.c  xgdk.h  xgio.c  xgio.h  xglib.h  xgtk.c  xgtk.h  xguile.c  xguile.h  xiso9660.c  xiso9660.h  xpulseaudio.h
src/y/: 8x13.h  README  audio_model.c  audio_model.h  backdrop.c  backdrop.h  bg.c  bg.h  draw.c  draw.h  ecma48.h  eng.c  eng.h  guile.c  guile.h  lineedit.c  lineedit.h  lisp.c  loop.c  loop.h  matrix.c  matrix.h  obj.c  obj.h  pixbuf.c  pixbuf.h  proc.c  proc.h  pulseaudio.c  rand.c  rand.h  repl.h  textbox.c  tga.c  vram.h
src/z/: README  game.h  glib-types.i  splash.h  swig.i  tmx.scm  tune.h
test/: Makefile.am  automake-test-lib.scm  burro_test_setup.burro  burro_window_size.burro  burro_window_width.burro  scm_test_setup.scm  window_height.scm  window_width.scm
tools/: README  ini.rl  rgb.c  targa.txt  tga.c  tga.h
tools/font/: README  REPERTOIRE  bdf-converter.c
tools/midi/: Makefile.am  README  miditones.c  miditonesV1.4.c  tones2adsr.pl
tools/targatool/: common.c  common.h  io.c  io.h  (+5 more)
(+12 files in other folders)
