SUBDIRS = src test

MAINTAINERCLEANFILES = \
 $(srcdir)/compile \
 $(srcdir)/depcomp \
 $(srcdir)/install-sh \
 $(srcdir)/missing \
 $(srcdir)/test-driver

desktopdir = $(datadir)/applications
desktop_DATA = burro-engine.desktop

appicondir=$(datadir)/icons/hicolor/scalable/apps
appicon_DATA = burro-engine.svg

